app/nodepass/npmaster-hyt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npmaster-hyt
  labels:
    app: npmaster
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: npmaster
  template:
    metadata:
      labels:
        app: npmaster
    spec:
      # [1] 钉在 hyt 上
      nodeSelector:
        kubernetes.io/hostname: hyt
      
      # [2] 容忍 hyt 的 "low-resource" 污点
      tolerations:
      - key: "low-resource"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"

      # [3] 开启 Host 网络模式 (对应 network_mode: host)
      # 注意：这会占用 hyt 的 9090 端口
      hostNetwork: true
      
      # [4] 直接使用宿主机 DNS (最稳妥)
      dnsPolicy: Default

      containers:
      - name: npmaster
        image: ghcr.io/yosebyte/nodepass:latest
        imagePullPolicy: IfNotPresent
        
        # [5] 对应 docker-compose 的 command
        # 这里把参数传给容器入口点
        args:
        - "master://0.0.0.0:9090?log=info&tls=1"
        
        volumeMounts:
        - name: data-vol
          mountPath: /gob # 容器内路径
      
      volumes:
      - name: data-vol
        hostPath:
          path: /opt/k3s-data/nodepass-master
          type: DirectoryOrCreate
