app/nodepass/npmaster-rich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npmaster-rich
  labels:
    app: npmaster
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: npmaster
  template:
    metadata:
      labels:
        app: npmaster
    spec:
      nodeSelector:
        kubernetes.io/hostname: rich

      # [3] 开启 Host 网络模式 (对应 network_mode: host)
      # 注意：这会占用 hyt 的 9090 端口
      hostNetwork: true
      
      # [4] 直接使用宿主机 DNS (最稳妥)
      dnsPolicy: Default

      containers:
      - name: npmaster
        image: ghcr.io/yosebyte/nodepass:v1.13.0
        imagePullPolicy: IfNotPresent
        
        # [5] 对应 docker-compose 的 command
        # 这里把参数传给容器入口点
        args:
        - "master://0.0.0.0:9090?log=info&tls=1"
        
        volumeMounts:
        - name: data-vol
          mountPath: /gob # 容器内路径
      
      volumes:
      - name: data-vol
        hostPath:
          path: /opt/k3s-data/nodepass-master
          type: DirectoryOrCreate
